--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h1 class="mt-5">Факультет безопасности</h1>
-        <p class="lead">{номер_вашей_группы}</p>
+        <p class="lead">{745}</p>
         <ul class="list-unstyled">
-          <li>Имя и Фамилия первого автора</li>
-          <li>Имя и Фамилия второго автора</li>
+          <li>Никишаев Е.Д.</li>
+          <li>Мариненко С.А.</li>
           <li>...</li>
         </ul>
       </div>
